--- a/Readme
+++ b/Readme
@@ -1,5 +1,8 @@
-![Логотип Шахтёр](Shahter.jpg)
-C:\Users\Ark811\Desktop\Lecturer_Reviewer\Shahter.jpg
+from PIL import Image
+img=Image.open(Shahter.jpg)
+img.show()
+
+
 
 Домашнее задание к лекции «Объекты и классы. Инкапсуляция, наследование и полиморфизм»
 ​Привет! Домашняя работа по данной теме является продолжением квиза к предыдущей лекции. Мы продолжим реализовывать логику функционала учебной группы в парадигме ООП. Удачи!
