--- a/Readme
+++ b/Readme
@@ -1,4 +1,5 @@
-Shahter1.jpg
+##Трудяга
+![Трудяга](Shahter1.jpg)
 
 Домашнее задание к лекции «Объекты и классы. Инкапсуляция, наследование и полиморфизм»
 ​Привет! Домашняя работа по данной теме является продолжением квиза к предыдущей лекции. Мы продолжим реализовывать логику функционала учебной группы в парадигме ООП. Удачи!
