--- a/Readme
+++ b/Readme
@@ -1,3 +1,5 @@
+![Picture](https://vscode.dev/github/ArkIvo23/classesstudents_and_mentor.py/blob/main/Shahter1.jpg)
+
 Домашнее задание к лекции «Объекты и классы. Инкапсуляция, наследование и полиморфизм»
 ​Привет! Домашняя работа по данной теме является продолжением квиза к предыдущей лекции. Мы продолжим реализовывать логику функционала учебной группы в парадигме ООП. Удачи!
 
