--- a/Readme
+++ b/Readme
@@ -1,4 +1,4 @@
-![Picture](https://vscode.dev/github/ArkIvo23/classesstudents_and_mentor.py/blob/main/Shahter1.jpg)
+![Picture](Shahter.jpg)
 
 Домашнее задание к лекции «Объекты и классы. Инкапсуляция, наследование и полиморфизм»
 ​Привет! Домашняя работа по данной теме является продолжением квиза к предыдущей лекции. Мы продолжим реализовывать логику функционала учебной группы в парадигме ООП. Удачи!
